# aage-practicas

./: README.md
p1/: P1.ipynb  README.md  p1.tex  p1_AndresLires_AngelVilarino.ipynb  p1_AndresLires_AngelVilarino.py  p1_Memoria_AndresLires_AngelVilarino.tex
p1/figures/: desktop.ini
p2/: 2-AprendizajeContinuo.ipynb  README.md  memoria.md
p2/1-AprendizajeFederado/: client_app.py  final_model.pt  histogramas.py  metrics.py  pyproject.toml  server_app.py  task.py
p2/1-AprendizajeFederado/experiments/: cnn_fedavg.toml  cnn_fedprox.toml  fedavg.toml  fedprox.toml  fraction_train01.toml  fraction_train09.toml  local_epochs3.toml  local_epochs5.toml  mlp_fedavg.toml  mlp_fedprox.toml  mobilenet.toml
p2/1-AprendizajeFederado/metrics/: metrics_FedAvg_CNNModel.csv  metrics_FedAvg_CNNModel_fraction-train_0.1.csv  metrics_FedAvg_CNNModel_fraction-train_0.9.csv  metrics_FedAvg_CNNModel_local-epochs_3.csv  metrics_FedAvg_CNNModel_local-epochs_5.csv  metrics_FedAvg_MLPSimple.csv  metrics_FedAvg_MobileNet.csv  metrics_FedAvg_MobileNet_fraction-train_0.5.csv  metrics_FedProx_CNNModel.csv  metrics_FedProx_MLPSimple.csv
p2/2-AprendizajeContinuo/: 2-AprendizajeContinuo.ipynb
