[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Parte 1. Aprendizaje Federado con Flower"
version = "1.0.0"
description = "Implementación de la parte 1 de la práctica 2 de AAGE: Aprendizaje Federado con Flower utilizando el conjunto de datos Fashion-MNIST."
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.23.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "server_app:app"
clientapp = "client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-evaluate = 0.5
fraction-train = 0.5
local-epochs = 1
min-available-clients = 10
learning-rate = 0.01
batch-size = 32
strategy = "FedAvg"
model = "MLPSimple"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
